--- a/guestbook/guestbook-project.yaml
+++ b/guestbook/guestbook-project.yaml
@@ -1,4 +1,4 @@
-apiVersion: project.openshift.io/v1
-kind: Project
+apiVersion: namespace.openshift.io/v1
+kind: Namespace
 metadata:
   name: guestbook
