--- a/monitoring/alertmanager.yaml
+++ b/monitoring/alertmanager.yaml
@@ -1,3 +1,11 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  name: alertmanager-main
+  namespace: argocd
+type: Opaque
+data:
+  alertmanager.yaml: |
 global:
   resolve_timeout: 5m
   slack_api_url: >-
