--- a/registry/registry-pv.yml
+++ b/registry/registry-pv.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: ocp-registry
+  labels:
+    registry: nfs
 spec:
   capacity:
     storage: 100Gi
