--- a/registry/registry-pvc.yml
+++ b/registry/registry-pvc.yml
@@ -2,7 +2,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: image-registry-storage
+  namespace: openshift-image-registry
 spec:
+  selector: 
+    matchLabels:
+      registry: nfs
   accessModes:
     - ReadWriteMany
   resources:
