--- a/overlays/lab/servingCert.yaml
+++ b/overlays/lab/servingCert.yaml
@@ -1,3 +1,3 @@
 - op: replace
   path: /spec/servingCerts/namedCertificates/0/servingCertificate/name
-  value: api.ocp4.foo.bar
+  value: jasonhorn-cert
