--- a/custom-certs/kustomization.yaml
+++ b/custom-certs/kustomization.yaml
@@ -1,4 +1,7 @@
 resources:
 - apiserver.yaml
+- apiserver-custom-cert-sealed-secret.yaml
 - ingress-controller.yaml
+- ingress-default-cert-sealed-secret.yaml
+
 
