Updated registry kustomize

--- a/overlays/lab/kustomization.yaml
+++ b/overlays/lab/kustomization.yaml
@@ -1,5 +1,6 @@
 bases:
 - ../../custom-certs
+- ../../registry
 patchesJson6902:
   - target:
       group: config.openshift.io
@@ -27,3 +28,20 @@ patchesJson6902:
       name: default
       namespace: openshift-ingress-operator
     path: ingress-replicas.yaml
+  - target:
+      version: v1
+      kind: PersistentVolumeClaim
+      name: image-registry-storage
+      namespace: openshift-image-registry
+    path: registry-pvc.yaml
+  - target:
+      version: v1
+      kind: PersistentVolume
+      name: ocp-registry
+    path: registry-pv.yaml
+  - target:
+      group: imageregistry.operator.openshift.io
+      version: v1
+      kind: Config
+      name: cluster
+    path: registry-cr.yaml
