--- a/registry/kustomization.yaml
+++ b/registry/kustomization.yaml
@@ -1,6 +1,6 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-
+commonLabels:
+  registry: nfs
 resources:
 - registry-pv.yml
 - registry-pvc.yml
+- config-imageregistry.yaml
