updates to folder struct

--- a/overlays/lab/monitoring/kustomization.yaml
+++ b/overlays/lab/monitoring/kustomization.yaml
@@ -1,6 +1,5 @@
 bases:
-- ../../custom-certs
-- ../../registry
+- ../../../monitoring
 patchesJson6902:
   - target:
       group: config.openshift.io
