--- a/overlays/lab/registry/kustomization.yaml
+++ b/overlays/lab/registry/kustomization.yaml
@@ -1,33 +1,6 @@
 bases:
-- ../../custom-certs
-- ../../registry
+- ../../../registry
 patchesJson6902:
-  - target:
-      group: config.openshift.io
-      version: v1
-      kind: APIServer
-      name: cluster
-    path: namedCert.yaml
-  - target:
-      group: config.openshift.io
-      version: v1
-      kind: APIServer
-      name: cluster
-    path: servingCert.yaml
-  - target:
-      group: operator.openshift.io
-      version: v1
-      kind: IngressController
-      name: default
-      namespace: openshift-ingress-operator
-    path: ingress-default-cert.yaml
-  - target:
-      group: operator.openshift.io
-      version: v1
-      kind: IngressController
-      name: default
-      namespace: openshift-ingress-operator
-    path: ingress-replicas.yaml
   - target:
       version: v1
       kind: PersistentVolumeClaim
