Updated registry manifests

--- a/custom-certs/apiserver.yaml
+++ b/custom-certs/apiserver.yaml
@@ -6,6 +6,6 @@ spec:
   servingCerts:
     namedCertificates:
     - names:
-      - api.apps.jasonhorn.io
+      - changeme
       servingCertificate:
-        name: jasonhorn-cert
+        name: changeme
