--- a/registry/image-registry-cr.yaml
+++ b/registry/image-registry-cr.yaml
@@ -3,4 +3,11 @@ kind: Config
 metadata:
   name: cluster
 spec:
+  storage:
+  pvc:
+    claim: image-registry-storage
   replicas: 1
+  defaultRoute: true
+  disableRedirect: false
+  logging: 2
+  managementState: Managed
