--- a/registry/registry-pvc.yaml
+++ b/registry/registry-pvc.yaml
@@ -4,5 +4,11 @@ metadata:
   name: image-registry-storage
   namespace: openshift-image-registry
 spec:
+  resources:
+    requests:
+      storage: 100Gi
+  selector:
+    matchLabels:
+      some: label
   accessModes:
     - ReadWriteMany
