Updated registry manifests

--- a/overlays/lab/registry/registry-pv.yaml
+++ b/overlays/lab/registry/registry-pv.yaml
@@ -6,3 +6,6 @@
     nfs:
       path: /ocp-registry
       server: nasbook.foo.bar
+    accessModes:
+    - ReadWriteMany
+    persistentVolumeReclaimPolicy: Retain
