--- a/infraNodes/default-node-selector.yaml
+++ b/infraNodes/default-node-selector.yaml
@@ -2,7 +2,5 @@ apiVersion: config.openshift.io/v1
 kind: Scheduler
 metadata:
   name: cluster
-spec: {}
-  policy:
-spec:
-  defaultNodeSelector:
+spec: 
+  defaultNodeSelector: node-role.kubernetes.io/worker=
