--- a/overlays/default/kubesealer/kustomization.yaml
+++ b/overlays/default/kubesealer/kustomization.yaml
@@ -4,11 +4,11 @@ kind: Kustomization
 #namespace: openshift-config
 
 bases:
-- ../../../bases/identity
+- ../../../bases/kubesealer
 
 secretGenerator:
   - name: idp-secret
-    files: 
+    files:
       - clientSecret
     namespace: openshift-config
     type: Opaque
