--- a/bases/bootstrap/identity/kustomization.yaml
+++ b/bases/bootstrap/identity/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 
 #namespace: openshift-config
 
-bases:
-- ../../../bases/bootstrap/identity
+#bases:
+#- ../../../bases/bootstrap/identity
 
 secretGenerator:
   - name: idp-secret
@@ -15,11 +15,3 @@ secretGenerator:
 
 generatorOptions:
   disableNameSuffixHash: true
-
-#patchesJson6902:
-# - target:
-#     group: config.openshift.io
-#     version: v1
-#     kind: OAuth
-#     name: cluster
-#   path: google-oauth-cr.yaml
