Updated file layout

--- a/bases/bootstrap/argocd/boot/deployment.yaml
+++ b/bases/bootstrap/argocd/boot/deployment.yaml
@@ -25,4 +25,5 @@ spec:
           command: ["/bin/bash", "-c"]
           args: [ "while true;  do sleep 1000; done;"]
       restartPolicy: Always
-      serviceAccountName: relabel
+      serviceAccountName: bootstrap
+
