--- a/bases/bootstrap/argocd/example-argocd-cr.yaml
+++ b/bases/bootstrap/argocd/example-argocd-cr.yaml
@@ -20,3 +20,9 @@ spec:
     scopes: '[groups]'
   initialRepositories: |
     - url: https://github.com/hornjason/argocd-lab.git
+      passwordSecret:
+        name: repo-github
+        key: password
+      usernameSecret:
+        name: repo-github
+        key: username
