--- a/bases/bootstrap/argocd/operatorgroup.yaml
+++ b/bases/bootstrap/argocd/operatorgroup.yaml
@@ -1,6 +1,7 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
+  generateName: argocd-
   name: argocd-operatorgroup
   namespace: argocd
 spec:
