--- a/bases/argocd/custom-certs-application.yaml
+++ b/bases/argocd/custom-certs-application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: identityprovider
+  name: customcerts
 spec:
   destination:
     namespace: default
