--- a/bases/custom-certs/apiserver-custom-cert-sealed-secret.yaml
+++ b/bases/custom-certs/apiserver-custom-cert-sealed-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
   creationTimestamp: null
-  name: jasonhorn-cert
+  name: custom-cert
   namespace: openshift-config
 spec:
   encryptedData:
@@ -11,7 +11,7 @@ spec:
   template:
     metadata:
       creationTimestamp: null
-      name: jasonhorn-cert
+      name: custom-cert
       namespace: openshift-config
     type: kubernetes.io/tls
 
