--- a/overlays/lab/customCerts/servingCert.yaml
+++ b/overlays/lab/customCerts/servingCert.yaml
@@ -1,3 +1,3 @@
 - op: replace
   path: /spec/servingCerts/namedCertificates/0/servingCertificate/name
-  value: jasonhorn-cert
+  value: custom-cert
