--- a/manifests/argocd/overlays/lab/kustomization.yaml
+++ b/manifests/argocd/overlays/lab/kustomization.yaml
@@ -1,6 +1,3 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-
 bases:
 -  ../../base
 
@@ -18,3 +15,4 @@ secretGenerator:
 patchesStrategicMerge:
   - patch-example-argocd-cr.yaml
   - patch-argo-admins.yaml
+  - argocd-project.yaml
