--- a/manifests/identity-provider/overlays/lab/kustomization.yaml
+++ b/manifests/identity-provider/overlays/lab/kustomization.yaml
@@ -8,7 +8,7 @@ patchesStrategicMerge:
 
 secretGenerator:
   - name: idp-secret
-    behavior: replace
+    #behavior: replace
     files: 
       - clientSecret
     namespace: openshift-config
