--- a/manifests/registry-nfs/overlays/lab/patch-registry-nfs.yaml
+++ b/manifests/registry-nfs/overlays/lab/patch-registry-nfs.yaml
@@ -34,6 +34,7 @@ metadata:
 spec:
    managementState: Managed
    replicas: 2
+   logging: 2
    storage:
      pvc:
        claim: image-registry-pvc
