--- a/manifests/cluster-users/overlays/lab/argocd-app-clusterusers-lab.yaml
+++ b/manifests/cluster-users/overlays/lab/argocd-app-clusterusers-lab.yaml
@@ -1,15 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: registry-nfs
+  name: cluster-users-lab
 spec:
   destination:
     namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
-    path: manifests/registry-nfs/overlays/lab
+    path: manifests/cluster-users/overlays/lab
     repoURL: 'https://github.com/hornjason/argocd-lab'
     targetRevision: demo
     directory:
       recurse: true
   project: default
+  syncPolicy:
+    automated: {}
