--- a/manifests/identity-provider/overlays/lab/argocd-app-idp-lab.yaml
+++ b/manifests/identity-provider/overlays/lab/argocd-app-idp-lab.yaml
@@ -12,6 +12,6 @@ spec:
     targetRevision: demo
     directory:
       recurse: true
-  project: hub
+  project: default
   syncPolicy:
     automated: {}
