--- a/manifests/registry-nfs/overlays/lab/argocd-app-registry-nfs.yaml
+++ b/manifests/registry-nfs/overlays/lab/argocd-app-registry-nfs.yaml
@@ -1,15 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: identity-provider-lab
+  name: registry-nfs
 spec:
   destination:
     namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
-    path: manifests/identity-provider/overlays/lab
+    path: manifests/registry-nfs/overlays/lab
     repoURL: 'https://github.com/hornjason/argocd-lab'
     targetRevision: demo
     directory:
       recurse: true
   project: default
+  syncPolicy:
+    automated: {}
