fixup! added cluster-users application

--- a/manifests/argocd/overlays/lab/kustomization.yaml
+++ b/manifests/argocd/overlays/lab/kustomization.yaml
@@ -6,13 +6,13 @@ namespace: argocd
 generatorOptions:
   disableNameSuffixHash: true
 
-secretGenerator:
-- name: repo-github
-  envs: 
-  - github.env
-  type: Opaque
-
+#secretGenerator:
+#  - name: repo-github
+#    envs: 
+#      - github.env
+#    type: Opaque
+#
 patchesStrategicMerge:
   - patch-example-argocd-cr.yaml
   - patch-argo-admins.yaml
-  - argocd-project.yaml
+  #  - argocd-project.yaml
