fixup! added lab prefix for overlay

--- a/manifests/argocd/base/kustomization.yaml
+++ b/manifests/argocd/base/kustomization.yaml
@@ -4,4 +4,4 @@ resources:
 - argo_admin_group.yaml    
 - cluster-role-binding.yaml
 - example-argocd-cr.yaml    
-- argocd-project.yaml
+#- argocd-project.yaml
