ReOrg cluster-users

--- a/manifests/cluster-users/overlays/lab/kustomization.yaml
+++ b/manifests/cluster-users/overlays/lab/kustomization.yaml
@@ -1,9 +1,9 @@
 bases:
 - ../../base
-
-patchesStrategicMerge:
-  - bindings.yaml
-
 generatorOptions:
   disableNameSuffixHash: true
+
+patchesStrategicMerge:
+  - cluster-role-bindings.yaml
+
 
