Added README for IDP

--- a/manifests/argocd/overlays/lab/kustomization.yaml
+++ b/manifests/argocd/overlays/lab/kustomization.yaml
@@ -6,12 +6,12 @@ namespace: argocd
 generatorOptions:
   disableNameSuffixHash: true
 
-#secretGenerator:
-#  - name: repo-github
-#    envs: 
-#      - github.env
-#    type: Opaque
-#
+secretGenerator:
+  - name: second-clusetr 
+    files: 
+      - github.env
+    type: Opaque
+
 patchesStrategicMerge:
   - example-argocd-cr.yaml
   - argocd-admin-group.yaml
