--- a/manifests/identity-provider/overlays/lab/argocd-app-idp-lab.yaml
+++ b/manifests/identity-provider/overlays/lab/argocd-app-idp-lab.yaml
@@ -2,13 +2,14 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: identity-provider-lab
+  namespace: argocd
 spec:
   destination:
     namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
     path: manifests/identity-provider/overlays/lab
-    repoURL: 'https://github.com/hornjason/argocd-lab'
+    repoURL: 'https://github.com/hornjason/argocd-lab.git'
     targetRevision: demo
     directory:
       recurse: true
