--- a/manifests/cluster-users/overlays/lab/argocd-app-clusterusers-lab.yaml
+++ b/manifests/cluster-users/overlays/lab/argocd-app-clusterusers-lab.yaml
@@ -8,7 +8,7 @@ spec:
     server: 'https://kubernetes.default.svc'
   source:
     path: manifests/cluster-users/overlays/lab
-    repoURL: 'https://github.com/hornjason/argocd-lab'
+    repoURL: 'https://github.com/hornjason/argocd-lab.git'
     targetRevision: demo
     directory:
       recurse: true
