--- a/manifests/identity-provider/overlays/lab/kustomization.yaml
+++ b/manifests/identity-provider/overlays/lab/kustomization.yaml
@@ -1,5 +1,3 @@
-namespace: openshift-config
-
 bases:
 - ../../base
 
@@ -8,7 +6,7 @@ patchesStrategicMerge:
 
 secretGenerator:
   - name: idp-secret
-    #behavior: replace
+    behavior: create
     files: 
       - clientSecret
     namespace: openshift-config
