--- a/manifests/kubesealer/overlays/lab/argocd-app-kubeseal.yaml
+++ b/manifests/kubesealer/overlays/lab/argocd-app-kubeseal.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: identity-provider-lab
+  name: kube-sealer 
   namespace: argocd
 spec:
   destination:
     namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
-    path: manifests/identity-provider/overlays/lab
+    path: manifests/kubesealer/overlays/lab
     repoURL: 'https://github.com/hornjason/argocd-lab.git'
     targetRevision: demo
   project: default
