--- a/manifests/migrate-metrics/argocd-app-migratemetrics.yaml
+++ b/manifests/migrate-metrics/argocd-app-migratemetrics.yaml
@@ -1,16 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: identity-provider-lab
+  name: migrate-metrics-lab
   namespace: argocd
 spec:
   destination:
     namespace: argocd
-    server: 'https://kubernetes.default.svc'
+    server: 'https://api.managed.foo.bar:6443'
   source:
-    path: manifests/identity-provider/overlays/lab
+    path: manifests/migrate-metrics/overlays/lab
     repoURL: 'https://github.com/hornjason/argocd-lab.git'
     targetRevision: demo
+    directory:
+      recurse: true
   project: default
   syncPolicy:
     automated: {}
