--- a/manifests/kubesealer/overlays/lab/argocd-app-kubeseal-cluster2.yaml
+++ b/manifests/kubesealer/overlays/lab/argocd-app-kubeseal-cluster2.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: migrate-router-lab
+  name: kube-sealer-cluster2
   namespace: argocd
 spec:
   destination:
     namespace: argocd
     server: 'https://api.managed.foo.bar:6443'
   source:
-    path: manifests/migrate-router/overlays/lab
+    path: manifests/kubesealer/overlays/lab
     repoURL: 'https://github.com/hornjason/argocd-lab.git'
     targetRevision: demo
   project: default
