--- a/manifests/cluster-users/overlays/lab/argocd-app-clusterusers-lab-cluster-2.yaml
+++ b/manifests/cluster-users/overlays/lab/argocd-app-clusterusers-lab-cluster-2.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: argocd
+    namespace: default
     server: 'https://api.managed.foo.bar:6443'
   source:
     path: manifests/cluster-users/overlays/lab
