--- a/manifests/migrate-registry/base/migrate-registry.yaml
+++ b/manifests/migrate-registry/base/migrate-registry.yaml
@@ -4,5 +4,6 @@ metadata:
   name: cluster
 spec:
   managementState: Managed
+  logging: 2
   nodeSelector:
       node-role.kubernetes.io/infra: "" 
