--- a/manifests/migrate-router/base/migrate-router.yaml
+++ b/manifests/migrate-router/base/migrate-router.yaml
@@ -2,12 +2,6 @@ apiVersion: operator.openshift.io/v1
 kind: IngressController
 metadata:
   name: default
-spec:
-  nodePlacement:
-    tolerations:
-      - key: node-function
-        operator: Exists
-        effect: NoSchedule
-    nodeSelector:
-      matchLabels:
-        node-role.kubernetes.io/infra: "" 
+  namespace: openshift-ingress-operator
+spec: {}
+
