--- a/manifests/cluster-users/overlays/dev/argocd-app-clusterusers-dev.yaml
+++ b/manifests/cluster-users/overlays/dev/argocd-app-clusterusers-dev.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kube-sealer-lab
+  name: cluster-users-dev
   namespace: argocd
 spec:
   destination:
-    namespace: argocd
-    server: 'https://kubernetes.default.svc'
+    namespace: default
+    server: 'https://api.managed.foo.bar:6443'
   source:
-    path: manifests/kubesealer/overlays/lab
+    path: manifests/cluster-users/overlays/dev
     repoURL: 'https://github.com/hornjason/argocd-lab.git'
     targetRevision: demo
   project: default
