--- a/manifests/registry/overlays/lab/argocd-app-registry-lab.yaml
+++ b/manifests/registry/overlays/lab/argocd-app-registry-lab.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kube-sealer-lab
+  name: registry-lab
   namespace: argocd
 spec:
   destination:
     namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
-    path: manifests/kubesealer/overlays/lab
+    path: manifests/registry-nfs/overlays/lab
     repoURL: 'https://github.com/hornjason/argocd-lab.git'
     targetRevision: demo
   project: default
