--- a/manifests/registry/overlays/dev/arqocd-app-registry-dev.yaml
+++ b/manifests/registry/overlays/dev/arqocd-app-registry-dev.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: migrate-registry-dev
+  name: registry-dev
   namespace: argocd
 spec:
   destination:
