--- a/manifests/migrate-router/overlays/dev/migrate-router.yaml
+++ b/manifests/migrate-router/overlays/dev/migrate-router.yaml
@@ -2,6 +2,7 @@ apiVersion: operator.openshift.io/v1
 kind: IngressController
 metadata:
   name: default
+  namespace: openshift-ingress-operator
 spec:
   nodePlacement:
     tolerations:
