--- a/manifests/migrate-router/base/migrate-router.yaml
+++ b/manifests/migrate-router/base/migrate-router.yaml
@@ -2,5 +2,6 @@ apiVersion: operator.openshift.io/v1
 kind: IngressController
 metadata:
   name: default
+  namespace: openshift-ingress-operator
 spec: {}
 
