--- a/manifests/sealed-secrets/overlays/dev/argocd-app-kubeseal.yaml
+++ b/manifests/sealed-secrets/overlays/dev/argocd-app-kubeseal.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kube-sealer-dev
+  name: sealed-secrets-dev
   namespace: argocd
 spec:
   destination:
     namespace: argocd
     server: 'https://api.managed.foo.bar:6443'
   source:
-    path: manifests/kubesealer/overlays/dev
+    path: manifests/sealed-secrets/overlays/dev
     repoURL: 'https://github.com/hornjason/argocd-lab.git'
     targetRevision: demo
   project: default
