--- a/manifests/registry/overlays/dev/registry-cr.yaml
+++ b/manifests/registry/overlays/dev/registry-cr.yaml
@@ -6,6 +6,7 @@ spec:
    managementState: Managed
    replicas: 1
    logging: 2
+   rolloutStrategy: Recreate
    tolerations:
    - key: node-function
      operator: Exists
