--- a/manifests/argocd/overlays/lab/example-argocd-cr.yaml
+++ b/manifests/argocd/overlays/lab/example-argocd-cr.yaml
@@ -4,7 +4,7 @@ metadata:
   name: example-argocd
 spec:
   server:
-    host: argocd.apps.hub.foo.bar
+    host: argocd.apps.the.jasonhorn.io
   rbac:
     defaultPolicy: 'role:readonly'
     policy: |
