--- a/manifests/migrate-router/overlays/lab/migrate-router.yaml
+++ b/manifests/migrate-router/overlays/lab/migrate-router.yaml
@@ -4,6 +4,8 @@ metadata:
   name: default
   namespace: openshift-ingress-operator
 spec:
+  defaultCertificate:
+    name: apps-the-jasonhorn-io
   nodePlacement:
     tolerations:
       - key: node-function
