--- a/manifests/custom-certs/base/api-certificate.yaml
+++ b/manifests/custom-certs/base/api-certificate.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
-  name: changeme
+  name: api-the-jasonhorn-io
   namespace: openshift-config
 spec:
   secretName: changeme
