--- a/manifests/custom-certs/base/cluster-issuer.yaml
+++ b/manifests/custom-certs/base/cluster-issuer.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
 metadata:
-  name: changeme
+  name: letsencrypt-prod
 spec:
   acme:
     # You must replace this email address with your own.
