--- a/manifests/custom-certs/overlays/lab/apps-certificate.yaml
+++ b/manifests/custom-certs/overlays/lab/apps-certificate.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: openshift-ingress
 spec:
   secretName: apps-the-jasonhorn-io
-  duration: 2160h #90d
-  renewBefore: 360h #15d
+  duration: 2160h0m0s #90d
+  renewBefore: 360h0m0s #15d
   dnsNames:
   - '*.apps.the.jasonhorn.io'
   issuerRef:
