--- a/manifests/argocd/argocd-operator/example-argocd-cr.yaml
+++ b/manifests/argocd/argocd-operator/example-argocd-cr.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ArgoCD
 metadata:
   name: example-argocd
+  namespace: argocd
 spec:
   dex:
     image: quay.io/redhat-cop/dex
